--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -82,3 +82,16 @@
   pages={404--411},
   year={2007}
 }
+
+@unpublished{chizat:hal-01945578,
+  TITLE = {{A Note on Lazy Training in Supervised Differentiable Programming}},
+  AUTHOR = {Chizat, Lenaic and Bach, Francis},
+  URL = {https://hal.inria.fr/hal-01945578},
+  NOTE = {working paper or preprint},
+  YEAR = {2018},
+  MONTH = Dec,
+  KEYWORDS = {Neural network optimization ; Kernel regression ; Gradient flow},
+  PDF = {https://hal.inria.fr/hal-01945578/file/chizatbach2018lazy.pdf},
+  HAL_ID = {hal-01945578},
+  HAL_VERSION = {v1},
+}
